...
  class: string;
  films: Film[];
  pilots: SW_Base[];
}

export interface SW_Person {
  __typename: 'Person';
  id: string;
  name: string;
  height: number;
  birthYear: string;
  mass: string;
  skinColor: string;
...
